<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Switch
        android:id="@+id/switch1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:minHeight="48dp"
        android:text="@string/read"
        app:layout_constraintBottom_toTopOf="@+id/switch2"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="464dp"
        android:minHeight="48dp"
        android:text="@string/execute"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:minHeight="48dp"
        android:text="@string/write"
        app:layout_constraintBottom_toTopOf="@+id/switch3"
        app:layout_constraintStart_toStartOf="parent" />


    <Switch
        android:id="@+id/switch4"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:minHeight="48dp"
        android:text="@string/read"
        app:layout_constraintBottom_toTopOf="@+id/switch5"
        app:layout_constraintEnd_toStartOf="@+id/switch7"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toEndOf="@+id/switch1" />

    <Switch
        android:id="@+id/switch6"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="464dp"
        android:minHeight="48dp"
        android:text="@string/execute"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/switch9"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toEndOf="@+id/switch3" />

    <Switch
        android:id="@+id/switch5"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:minHeight="48dp"
        android:text="@string/write"
        app:layout_constraintBottom_toTopOf="@+id/switch6"
        app:layout_constraintEnd_toStartOf="@+id/switch8"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toEndOf="@+id/switch2" />

    <Switch
        android:id="@+id/switch7"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:minHeight="48dp"
        android:text="@string/read"
        app:layout_constraintBottom_toTopOf="@+id/switch8"
        app:layout_constraintEnd_toEndOf="parent" />

    <Switch
        android:id="@+id/switch9"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="456dp"
        android:minHeight="48dp"
        android:text="@string/execute"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Switch
        android:id="@+id/switch8"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:minHeight="48dp"
        android:text="@string/write"
        app:layout_constraintBottom_toTopOf="@+id/switch9"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:minHeight="48dp"
        android:text="@string/permission_owner"
        app:layout_constraintBottom_toTopOf="@+id/switch1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/permission_group"
        app:layout_constraintBottom_toTopOf="@+id/switch4"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:minHeight="48dp"
        android:text="@string/permission_public"
        app:layout_constraintBottom_toTopOf="@+id/switch7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="calculate"
        android:text="@string/calculator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch6"
        app:layout_constraintVertical_bias="0.105" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="272dp"
        android:gravity="center"
        android:text="@string/symbolic_mode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textSymbolicMode"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="224dp"
        android:gravity="center"
        android:text="@string/symbolic_mode_none"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textAbsoluteMode"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="224dp"
        android:gravity="center"
        android:text="@string/absolute_mode_none"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="272dp"
        android:gravity="center"
        android:text="@string/absolute_mode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>